corrected spacing

--- a/wwwroot/css/backend_styling.css
+++ b/wwwroot/css/backend_styling.css
@@ -44,8 +44,8 @@
   background-color: #f8f7f3;
   /* text-align: center; */
   margin-bottom: 10px;
-  /* float: left; */
-  /* width: 600px; */
+  float: left;
+  width: 600px;
   /* margin: 0 auto; */
 
 }
