--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -78,7 +78,7 @@ body {
   color: black;
   text-align: center;
   background-color: #72bb53;
-  /* padding: 5px; */
+  padding: 2px;
   margin: 10px;
   border-style: solid;
   border-color: black;
